--- a/msvc/Search.vcxproj
+++ b/msvc/Search.vcxproj
@@ -76,25 +76,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\search_devide_word.cpp" />
-    <ClCompile Include="..\src\search_forward_index.cpp" />
-    <ClCompile Include="..\src\search_index_struct.cpp" />
+    <ClCompile Include="..\src\search_doc_word.cpp" />
     <ClCompile Include="..\src\search_inverted_index.cpp" />
     <ClCompile Include="..\src\search_parser.cpp" />
     <ClCompile Include="..\src\search_main.cpp" />
     <ClCompile Include="..\src\search_md5.cpp" />
     <ClCompile Include="..\src\search_query.cpp" />
+    <ClCompile Include="..\src\search_segment.cpp" />
     <ClCompile Include="..\src\search_util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\search_define.h" />
-    <ClInclude Include="..\src\search_devide_word.h" />
-    <ClInclude Include="..\src\search_forward_index.h" />
-    <ClInclude Include="..\src\search_index_struct.h" />
+    <ClInclude Include="..\src\search_doc_word.h" />
     <ClInclude Include="..\src\search_inverted_index.h" />
     <ClInclude Include="..\src\search_parser.h" />
     <ClInclude Include="..\src\search_md5.h" />
     <ClInclude Include="..\src\search_query.h" />
+    <ClInclude Include="..\src\search_segment.h" />
     <ClInclude Include="..\src\search_util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
