--- a/msvc/Search.vcxproj.filters
+++ b/msvc/Search.vcxproj.filters
@@ -27,19 +27,16 @@
     <ClCompile Include="..\src\search_util.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\search_forward_index.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\search_inverted_index.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\search_index_struct.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="..\src\search_query.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\search_devide_word.cpp">
+    <ClCompile Include="..\src\search_segment.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\search_doc_word.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,19 +53,16 @@
     <ClInclude Include="..\src\search_define.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\search_forward_index.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\search_inverted_index.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\search_index_struct.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\src\search_query.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\search_devide_word.h">
+    <ClInclude Include="..\src\search_segment.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\search_doc_word.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
