--- a/msvc/Search.vcxproj
+++ b/msvc/Search.vcxproj
@@ -80,7 +80,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\search_crawl.cpp" />
     <ClCompile Include="..\src\search_doc_word.cpp" />
-    <ClCompile Include="..\src\search_inverted_index.cpp" />
+    <ClCompile Include="..\src\search_index.cpp" />
     <ClCompile Include="..\src\search_parser.cpp" />
     <ClCompile Include="..\src\search_main.cpp" />
     <ClCompile Include="..\src\search_md5.cpp" />
@@ -92,7 +92,7 @@
     <ClInclude Include="..\src\search_crawl.h" />
     <ClInclude Include="..\src\search_define.h" />
     <ClInclude Include="..\src\search_doc_word.h" />
-    <ClInclude Include="..\src\search_inverted_index.h" />
+    <ClInclude Include="..\src\search_index.h" />
     <ClInclude Include="..\src\search_parser.h" />
     <ClInclude Include="..\src\search_md5.h" />
     <ClInclude Include="..\src\search_query.h" />
