--- a/msvc/Search.vcxproj.filters
+++ b/msvc/Search.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\src\search_index.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\search_db.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\search_md5.h">
@@ -69,6 +72,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\src\search_index.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\search_db.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
