Change: success to porting linux

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,6 @@
 DIR_SRC=./
+DIR_3RD=../3rd/
+DIR_MYSQL_LIB=/usr/lib64/mysql/
 TARGET=search
 
 
@@ -6,10 +8,13 @@ CPPS=$(wildcard $(DIR_SRC)*.cpp)
 CPPS+=$(wildcard $(DIR_SRC)/pugixml/*.cpp)
 OBJS=$(patsubst %.cpp,%.o,$(CPPS))
 
-CFLAGS=-O 
+CFLAGS=-O -DLINUX
+CFLAGS+=-I $(DIR_3RD)libscws/include
+CFLAGS+=-I $(DIR_3RD)
 
 CC=g++
-LIB=
+LIB=-L $(DIR_3RD)libscws/lib/ -lscws -pthread
+LIB+=-L $(DIR_MYSQL_LIB) -lmysqlclient
 
 all:$(TARGET)
 $(TARGET):$(OBJS)
